Correction alignement titres page infos pratiques

--- a/css/main.scss
+++ b/css/main.scss
@@ -35,6 +35,7 @@ body {
 /* Titres */
 h1,h2,h3,h4,h5 {
   font-size: 100%;
+  width: 100%;
   font-family: 'Poppins','Lato',  sans-serif;
 }
 
